--- a/index.html
+++ b/index.html
@@ -11,80 +11,101 @@
 </head>
 <body>
     <header>
-        <nav>
-            <img src="/images/WebStudio2.png" alt="" class="header_image">
-            <ul class="header_navigation">
-                <li><a href="#" target="_self" class="header_navigation--item">Студія</a></li>
-                <li><a href="#" target="_blank" class="header_navigation--item">Портфоліо</a></li>
-                <li><a href="#" target="_self" class="header_navigation--item">Контакти</a></li>
-                <li><a href="#" target="_blank" class="header_navigation--item">info@devstudio.com</a></li>
-                <li><a href="#" target="_self" class="header_navigation--item">+380 096 111 11</a></li>
-            </ul>
-        </nav>
+        <div class="container">
+            <div>
+                <img src="/images/WebStudio2.png" alt="" class="header_image">
+            </div>
+            <div>
+                <ul class="header_navigation">
+                    <li><a href="#" target="_self" class="header_navigation--item">Студія</a></li>
+                    <li><a href="#" target="_blank" class="header_navigation--item">Портфоліо</a></li>
+                    <li><a href="#" target="_self" class="header_navigation--item">Контакти</a></li>
+                    <li><a href="#" target="_blank" class="header_navigation--item">info@devstudio.com</a></li>
+                    <li><a href="#" target="_self" class="header_navigation--item">+380 096 111 11</a></li>
+                </ul>
+            </div>
+        </div>
     </header>
     <main class="main">
-        <div class="main_textbutton">
-            <h1 style="color: #FFFFFF;">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+        <div class="main_title-text">
+            <h1>ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
             <button>Замовити послугу</button>
         </div>
-        <div class="main_textcard">
-            <h2 class="main_card--title">УВАГА ДО ДЕТАЛЕЙ</h2>
-            <p class="main_card--text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+        <div class="container">
+            <section class="main_first-section">
+                <div class="main_textcard">
+                    <h2 class="main_card--title">УВАГА ДО ДЕТАЛЕЙ</h2>
+                    <p class="main_card--text">Ідейні міркування, і навіть початок повсякденної роботи з формування
+                        позиції.</p>
+                </div>
+                <div class="main_textcard">
+                    <h2 class="main_card--title">ПУНКТУАЛЬНІСТЬ</h2>
+                    <p class="main_card--text">Завдання організації, особливо рамки і місце навчання кадрів тягне у
+                        себе.</p>
+                </div>
+                <div class="main_textcard">
+                    <h2 class="main_card--title">ПЛАНУВАННЯ</h2>
+                    <p class="main_card--text">Так само консультація з широким активом значною мірою зумовлює.</p>
+                </div>
+                <div class="main_textcard">
+                    <h2 class="main_card--title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+                    <p class="main_card--text">Значимість цих проблем настільки очевидна, що реалізація планових
+                        завдань.</p>
+                </div>
+            </section>
+            <section class="main_second-section">
+                <h2 class="main_card--title">Чим ми займаємося</h2>
+                <div class="main_picturecard">
+                    <img src="/images/nout.png" alt="work at tablet" class="main_container--image">
+                    <img src="/images/robota.png" alt="work at laptop" class="main_container--image">
+                    <img src="/images/dizain.png" alt="work at graphics tablet" class="main_container--image">
+                </div>
+            </section>
+            <section class="main_third-section">
+                <div class="main_third-title">
+                    <h2>Наша команда</h2>
+                </div>
+                <div class="main_third-cards">
+                    <div class="main_third-card">
+                        <img src="/images/men.jpg" alt="men with glasses" width="250" class="main_container--image">
+                        <h3 class="main_card--secondtitle">Ігор Дем'яненко</h3>
+                        <p>Product Designer</p>
+                    </div>
+                    <div class="main_third-card">
+                        <img src="/images/woo.jpg" alt="girl with glasses" width="250" class="main_container--image">
+                        <h3 class="main_card--secondtitle">Ольга Рєпіна</h3>
+                        <p class="main_card--secondtext">Frontend Developer</p>
+                    </div>
+                    <div class="main_third-card">
+                        <img src="/images/men_without_glasses.jpg" alt="men without glasses" width="250"
+                            class="main_container--image">
+                        <h3 class="main_card--secondtitle">Микола Тарасов</h3>
+                        <p class="main_card--secondtext">Marketing</p>
+                    </div>
+                    <div class="main_third-card">
+                        <img src="/images/men_with_glasses.jpg" alt="men with glasses" width="250"
+                            class="main_container--image">
+                        <h3 class="main_card--secondtitle">Михайло Єрмаков</h3>
+                        <p class="main_card--secondtext">UI Designer</p>
+                    </div>
+                </div>
+            </section>
         </div>
-        <div class="main_textcard">
-            <h2 class="main_card--title">ПУНКТУАЛЬНІСТЬ</h2>
-            <p class="main_card--text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
-        </div>
-        <div class="main_textcard">
-            <h2 class="main_card--title">ПЛАНУВАННЯ</h2>
-            <p class="main_card--text">Так само консультація з широким активом значною мірою зумовлює.</p>
-        </div>
-        <div class="main_textcard">
-            <h2 class="main_card--title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-            <p class="main_card--text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
-        </div>
-        <br>
-        <div class="main_picturecard">
-            <h2 class="main_card--title">Чим ми займаємося</h2>
-            <img src="/images/nout.png" alt="work at tablet" class="main_container--image">
-            <img src="/images/robota.png" alt="work at laptop" class="main_container--image">
-            <img src="/images/dizain.png" alt="work at graphics tablet" class="main_container--image">
-        </div>
-        <br>
-        <h2>Наша команда</h2>
-        <section class="main_section--first">
-            <img src="/images/men.jpg" alt="men with glasses" width="250" class="main_container--image">
-            <h3 class="main_card--secondtitle">Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
-        </section>
-        <br>
-        <section class="main_section--first">
-            <img src="/images/woo.jpg" alt="girl with glasses" width="250" class="main_container--image">
-            <h3 class="main_card--secondtitle">Ольга Рєпіна</h3>
-            <p class="main_card--secondtext">Frontend Developer</p>
-        </section>
-        <br>
-        <section class="main_section--first">
-            <img src="/images/men_without_glasses.jpg" alt="men without glasses" width="250"
-                class="main_container--image">
-            <h3 class="main_card--secondtitle">Микола Тарасов</h3>
-            <p class="main_card--secondtext">Marketing</p>
-        </section>
-        <br>
-        <section class="main_section--first">
-            <img src="/images/men_with_glasses.jpg" alt="men with glasses" width="250" class="main_container--image">
-            <h3 class="main_card--secondtitle">Михайло Єрмаков</h3>
-            <p class="main_card--secondtext">UI Designer</p>
-        </section>
-        <br>
     </main>
     <footer class="footer">
-        <img src="/images/WebStudio.png" alt="" class="paragraf" class="footer_image">
-        <ul>
-            <li class="paragraf" class="footer_navigftion--first">м&#183; Київ&#716; пр-т Лесі Українки&#716; 26</li>
-            <li class="paragraf" class="footer_navigftion--first">info@devstudio.com</li>
-            <li class="paragraf" class="footer_navigftion--first">+38 096 111 11 11</li>
-        </ul>
+        <div class="container">
+            <div>
+                <img src="/images/WebStudio.png" alt="" class="paragraf" class="footer_image">
+            </div>
+        </div>
+        <div>
+            <ul>
+                <li class="paragraf" class="footer_navigation--first">м&#183; Київ&#716; пр-т Лесі Українки&#716; 26
+                </li>
+                <li class="paragraf" class="footer_navigation--first">info@devstudio.com</li>
+                <li class="paragraf" class="footer_navigation--first">+38 096 111 11 11</li>
+            </ul>
+        </div>
     </footer>
 </body>
 </html>
