--- a/index2.html
+++ b/index2.html
@@ -111,14 +111,16 @@
         </div>
     </main>
     <footer class="footer">
-        <div class="container"></div>
-        <br>
+        <div class="container">
         <img src="/images/WebStudio.png" alt="" class="paragraf" class="footer_image">
+    </div>
+    <div>
         <ul>
-            <li class="paragraf" class="footer_navigation--item">м&#183; Київ&#716; пр-т Лесі Українки&#716; 26</li>
-            <li class="paragraf" class="footer_navigation--item">info@devstudio.com</li>
-            <li class="paragraf" class="footer_navigation--item">+38 096 111 11 11</li>
+            <li class="paragraf" class="footer_navigation--item" class="footer_container">м&#183; Київ&#716; пр-т Лесі Українки&#716; 26</li>
+            <li class="paragraf" class="footer_navigation--item" class="footer_container">info@devstudio.com</li>
+            <li class="paragraf" class="footer_navigation--item" class="footer_container">+38 096 111 11 11</li>
         </ul>
+    </div>
         </div>
     </footer>
 </body>
