--- a/index.html
+++ b/index.html
@@ -91,14 +91,13 @@
                 </div>
             </section>
         </div>
+        <br>
     </main>
     <footer class="footer">
         <div class="container">
-            <div>
+            <div class="footer_navigation--first"> 
                 <img src="/images/WebStudio.png" alt="" class="paragraf" class="footer_image">
-            </div>
         </div>
-        <div>
             <ul>
                 <li class="paragraf" class="footer_navigation--first">м&#183; Київ&#716; пр-т Лесі Українки&#716; 26
                 </li>
